--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "jest"
   },
   "keywords": [
@@ -31,9 +32,11 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
+    "@types/js-cookie": "^3.0.2",
     "@types/strip-comments": "^2.0.1",
     "bafu": "file:../js-functional",
     "jest": "^29.3.1",
+    "js-cookie": "^3.0.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
