--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "arep": "file:../js-asyncStringReplacer",
     "flowco": "file:../js-logic",
-    "strip-comments": "^2.0.1"
+    "strip-comments": "^2.0.1",
+    "typescript": "^4.9.4"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,6 @@
     "bafu": "file:../js-functional",
     "jest": "^29.3.1",
     "js-cookie": "^3.0.1",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "ts-jest": "^29.0.3"
   }
 }
