--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js_bundler",
+  "name": "x-bundler",
   "version": "0.0.1",
   "description": "very fast in memory javascript bundler",
   "main": "dist/index.js",
@@ -20,11 +20,11 @@
     "watchable"
   ],
   "author": "ali safari",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "arep": "file:../js-asyncStringReplacer",
+    "delete_comments": "file:../delete-comments",
     "flowco": "file:../js-logic",
-    "strip-comments": "^2.0.1",
     "typescript": "^4.9.4"
   },
   "repository": {
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "@types/js-cookie": "^3.0.2",
-    "@types/strip-comments": "^2.0.1",
     "bafu": "file:../js-functional",
     "jest": "^29.3.1",
     "js-cookie": "^3.0.1",
