--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist",
     "declaration": true,
     "moduleResolution": "Node",
-    "module": "Node16"
+    "module": "Node16",
+    "esModuleInterop": true
   },
   "include": [
     "src"
