--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "x-bundler",
+  "name": "bundlex",
   "version": "0.0.1",
   "description": "very fast in memory javascript bundler",
   "main": "dist/index.js",
@@ -22,10 +22,10 @@
   "author": "ali safari",
   "license": "MIT",
   "dependencies": {
-    "arep": "file:../js-asyncStringReplacer",
-    "delete_comments": "file:../delete-comments",
-    "flowco": "file:../js-logic",
-    "typescript": "^4.9.4"
+    "arep": "^0.0.4",
+    "delete_comments": "^0.0.2",
+    "typescript": "^4.9.4",
+    "vaco": "^0.0.4"
   },
   "repository": {
     "type": "git",
@@ -34,10 +34,10 @@
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "@types/js-cookie": "^3.0.2",
-    "bafu": "file:../js-functional",
+    "bafu": "^0.0.5",
     "jest": "^29.3.1",
     "js-cookie": "^3.0.1",
-    "jsx_transpiler": "file:../jsx-transpiler",
+    "jsxpiler": "^0.0.1",
     "ts-jest": "^29.0.3"
   }
 }
