--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bundlex",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "very fast in memory javascript bundler",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -25,7 +25,7 @@
     "arep": "^0.0.5",
     "delete_comments": "^0.0.2",
     "typescript": "^4.9.4",
-    "vaco": "^0.0.4"
+    "vaco": "file:../js-logic"
   },
   "repository": {
     "type": "git",
