--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "arep": "^0.0.5",
     "delete_comments": "^0.0.2",
     "typescript": "^4.9.4",
-    "vaco": "file:../js-logic"
+    "vaco": "^0.0.7"
   },
   "repository": {
     "type": "git",
