--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "bundlex",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "very fast in memory javascript bundler",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "prepack": "tsc",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "test": "jest"
+  },
+  "bin": {
+    "bundlex": "./bin/index.js"
   },
   "keywords": [
     "bundler",
