--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
+    // "strict": true,
     "outDir": "dist",
     "declaration": true,
     "moduleResolution": "Node16",
