--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "bundlex",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "very fast in memory javascript bundler",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "prepack": "tsc",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "bin": {
     "bundlex": "./bin/index.js"
@@ -25,20 +25,19 @@
   ],
   "author": "ali safari",
   "license": "MIT",
-  "dependencies": {
-    "arep": "^0.0.5",
-    "delete_comments": "^0.0.2",
-    "typescript": "^4.9.4",
-    "vaco": "^0.0.7"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/alisa4y/js-bundler.git"
   },
+  "dependencies": {
+    "bafu": "^2.0.0",
+    "ontermination": "^1.0.1",
+    "typescript": "^5.5.3",
+    "vaco": "^2.4.2"
+  },
   "devDependencies": {
     "@types/jest": "^29.2.2",
     "@types/js-cookie": "^3.0.2",
-    "bafu": "^0.0.5",
     "jest": "^29.3.1",
     "js-cookie": "^3.0.1",
     "jsxpiler": "^0.0.1",
