--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    // "strict": true,
-    "outDir": "dist",
+    "strict": true,
+    "removeComments": true,
+    "outDir": "build",
     "declaration": true,
     "moduleResolution": "Node16",
     "module": "Node16",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": [
+      "ESNext"
+    ]
   },
   "include": [
     "src"
